fix tiles margin on mobile view

--- a/style.css
+++ b/style.css
@@ -113,16 +113,17 @@ h3{
 }
 .projects-grid{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: center;
 }
 .project-tile {
   width: 300px;
   height: 500px;
   background-color: dimgray;
   position: relative;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
   border: 1px solid darkslategrey;
   border-radius: 3px;
   margin-top: 2vh;
@@ -269,5 +270,11 @@ footer hr{
   }
   #navbar ul li {
     font-size: 2em;
+  }
+  .projects-grid{
+    flex-direction: row;
+  }
+  .project-tile {
+    margin-right: 2rem;
   }
 }
